# GeometrySystem

./: .gitignore  CMakeLists.txt  Circle.cpp  Circle.h  Group.cpp  Group.h  Point3D.h  README.md  Rectangle.cpp  Rectangle.h  Scene.cpp  Scene.h  Shape.h  Triangle.cpp  Triangle.h  main.cpp
